final-project/k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: 637423558559.dkr.ecr.eu-west-1.amazonaws.com/ecr-myhub/backend-image:latest
        ports:
        - containerPort: 3001
