final-project/k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: 637423558559.dkr.ecr.eu-west-1.amazonaws.com/ecr-myhub/frontend-image:latest
        ports:
        - containerPort: 80
